k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: substitute
spec:
  replicas: 2
  selector:
    matchLabels:
       app: substitute
  template:
    metadata:
      labels:
        app: substitute
    spec:
      containers:
      - name: substitute
        image: agentstas.azurecr.io/substitute:20221003
        imagePullPolicy: Always
        ports:
        - name: containerport
          containerPort: 8080
      tolerations:
        - key: "CriticalAddonsOnly"
          effect: "NoSchedule"
          value: "true"
