k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: substitute
spec:
  ports:
  - port: 8080
  selector:
    app: substitute
